--- a/client/pulumi/Pulumi.yaml
+++ b/client/pulumi/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: auth0-test
-description: Infrastructure code for auth0-test app
+name: auth0-test-client
+description: Infrastructure code for auth0-test client app
 runtime: nodejs
