--- a/client/pulumi/package.json
+++ b/client/pulumi/package.json
@@ -5,8 +5,8 @@
         "@types/node": "^14"
     },
     "dependencies": {
-        "@pulumi/aws-native": "^0.8.0",
-        "@pulumi/aws-static-website": "^0.2.1",
-        "@pulumi/pulumi": "^3.0.0"
+        "@pulumi/aws": "^5.24.0",
+        "@pulumi/pulumi": "^3.0.0",
+        "@pulumi/synced-folder": "^0.0.9"
     }
 }
