feat: deploy to production

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,14 +1,11 @@
-name: deploy-client-dev
+name: deploy-dev
 
 on:
   pull_request:
-    paths:
-      - client/**
 
 jobs:
   
   deploy-client-dev:
-
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
