--- a/.github/workflows/destroy-dev.yml
+++ b/.github/workflows/destroy-dev.yml
@@ -1,12 +1,9 @@
-name: destroy-client-dev
+name: destroy-dev
 
 on:
-  
   pull_request:
     types:
       - closed
-    paths:
-      - client/**
 
 jobs:
   
