--- a/.github/workflows/destroy-dev.yml
+++ b/.github/workflows/destroy-dev.yml
@@ -7,17 +7,17 @@ on:
 
 jobs:
   
-  destroy-client-dev:
+  destroy-app:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - run: npm ci
-        working-directory: client/pulumi
+        working-directory: pulumi
       - uses: pulumi/actions@v3
         with:
           command: destroy
           stack-name: ${{ github.head_ref }}
-          work-dir: client/pulumi
+          work-dir: pulumi
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
