--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build Client
+        env:
+            VITE_API_URL: https://auth0-test-api.staging.jbrunton-aws.com
         run: |
           npm ci
           npm run build
@@ -84,6 +86,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: build
+        env:
+          VITE_API_URL: https://auth0-test-api.jbrunton-aws.com
         run: |
           npm ci
           npm run build
