--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -15,6 +15,7 @@ jobs:
       buildpack: paketo-buildpacks/nodejs
       publish: true
       docker-username: jbrunton
+      cache-image: jbrunton/auth0-test-api-cache-image:latest
     secrets:
       docker-access-token: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
