--- a/services/api/package.json
+++ b/services/api/package.json
@@ -25,7 +25,12 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "express-jwt": "7.7.7",
+    "jwks-rsa": "3.0.0",
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -37,6 +42,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "3.0.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
