--- a/services/api/package.json
+++ b/services/api/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "express-jwt": "7.7.7",
     "jwks-rsa": "3.0.0",
+    "node-fetch": "2.6.7",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0",
     "reflect-metadata": "^0.1.13",
@@ -42,6 +43,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
+    "@types/node-fetch": "2.6.2",
     "@types/passport-jwt": "3.0.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
