--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,6 @@ jobs:
       publish: true
       docker-username: jbrunton
       cache-image: jbrunton/auth0-test-api-cache-image:latest
-      tag: latest
     secrets:
       docker-access-token: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
@@ -78,14 +77,14 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: us-east-1
-          TAG: latest
+          TAG: ${{ needs.build-api.outputs.tag }}
 
   deploy-production:
     environment:
       name: Production
       url: https://auth0-test.jbrunton-aws.com
     concurrency: production
-    needs: [deploy-staging]
+    needs: [build-api, deploy-staging]
     if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
     steps:
@@ -112,4 +111,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: us-east-1
-          TAG: latest
+          TAG: ${{ needs.build-api.outputs.tag }}
