--- a/services/api/package.json
+++ b/services/api/package.json
@@ -12,9 +12,9 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "echo \"PID=$$\" && node dist/main",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start": "node dist/src/main",
+    "start:dev": "NODE_ENV=development nest start --watch",
+    "start:debug": "NODE_ENV=development nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -23,8 +23,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "3.238.0",
+    "@aws-sdk/credential-provider-node": "3.238.0",
+    "@aws-sdk/lib-dynamodb": "3.238.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/passport": "9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "auth0": "3.0.1",
@@ -33,6 +37,7 @@
     "node-fetch": "2.6.7",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0",
+    "rambda": "7.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
