--- a/services/api/package.json
+++ b/services/api/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/passport": "9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "auth0": "3.0.1",
     "express-jwt": "7.7.7",
     "jwks-rsa": "3.0.0",
     "node-fetch": "2.6.7",
@@ -40,6 +41,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/auth0": "2.35.8",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
