feat: add eslint to client

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        directory: ["services/api", "pulumi"]
+        directory: ["client", "services/api", "pulumi"]
     defaults:
       run:
         working-directory: ${{ matrix.directory }}
