--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,21 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src/**/*.{ts,tsx} --max-warnings 0",
-    "lint:fix": "eslint --fix 'src/**/*.{ts,tsx}'",
+    "lint": "eslint --max-warnings 0 'src/**/*.{ts,tsx}'",
+    "lint:fix": "eslint --max-warnings 0 --fix 'src/**/*.{ts,tsx}'",
     "format": "prettier --write 'src/**/*.{ts,tsx,css,md}' --config ./.prettierrc"
   },
   "dependencies": {
     "@auth0/auth0-react": "1.12.0",
+    "@chakra-ui/react": "2.4.6",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
     "@tanstack/react-query": "^4.20.4",
+    "framer-motion": "8.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "4.7.1",
+    "react-router-dom": "6.6.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
