--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,25 @@ jobs:
       - uses: actions/checkout@v3
       - run: npm ci
       - run: npm run test
-  
+
+  e2e-test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        directory: ["services/api"]
+    defaults:
+      run:
+        working-directory: ${{ matrix.directory }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: rrainn/dynamodb-action@v2.0.1
+        with:
+          port: 8001
+      - run: npm ci
+      - run: npm run test:e2e
+
   build-api:
-    needs: [lint, test]
+    needs: [lint, test, e2e-test]
     if: github.ref == 'refs/heads/develop'
     uses: jbrunton/workflows/.github/workflows/build-image.yml@develop
     with:
