--- a/services/api/package.json
+++ b/services/api/package.json
@@ -15,8 +15,12 @@
     "start": "node dist/src/main",
     "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "NODE_ENV=development nest start --debug --watch",
+    "db:init": "NODE_ENV=development ts-node ./scripts/db/init.ts",
+    "db:drop": "NODE_ENV=development ts-node ./scripts/db/drop.ts",
+    "db:test:drop": "NODE_ENV=test ts-node ./scripts/dropdb.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "test:int": "jest --config ./jest.int.config.js",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -27,6 +31,7 @@
     "@aws-sdk/credential-provider-node": "3.238.0",
     "@aws-sdk/lib-dynamodb": "3.238.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "9.0.0",
@@ -59,6 +64,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
+    "jest-mock-extended": "3.0.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
