--- a/services/api/package.json
+++ b/services/api/package.json
@@ -15,6 +15,9 @@
     "start": "node dist/src/main",
     "start:dev": "NODE_ENV=development nest start --watch",
     "start:debug": "NODE_ENV=development nest start --debug --watch",
+    "db:init": "NODE_ENV=development ts-node ./scripts/initdb.ts",
+    "db:drop": "NODE_ENV=development ts-node ./scripts/dropdb.ts",
+    "db:test:drop": "NODE_ENV=test ts-node ./scripts/dropdb.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
