--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,21 @@ jobs:
       - uses: actions/checkout@v3
       - run: npm ci
       - run: npm run test
-  
+
+  e2e-test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        directory: ["services/api"]
+    defaults:
+      run:
+        working-directory: ${{ matrix.directory }}
+    steps:
+      - uses: actions/checkout@v3
+      - run: docker-compose up -d
+      - run: npm ci
+      - run: npm run test:e2e
+
   build-api:
     needs: [lint, test]
     if: github.ref == 'refs/heads/develop'
