--- a/pulumi/package.json
+++ b/pulumi/package.json
@@ -24,6 +24,7 @@
     "@pulumi/aws": "5.24.0",
     "@pulumi/awsx": "0.40.1",
     "@pulumi/pulumi": "3.49.0",
+    "@pulumi/pulumiservice": "0.1.8",
     "@pulumi/random": "4.8.2",
     "@pulumi/synced-folder": "^0.0.9",
     "date-fns": "2.29.3",
