--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -36,7 +36,7 @@ jobs:
         working-directory: client
       - run: npm ci
         working-directory: pulumi
-      - uses: pulumi/actions@v3
+      - uses: jbrunton/pulumi-actions@use-github-token
         with:
           command: up
           stack-name: ${{ github.head_ref }}
