refactor: use onetable

--- a/services/api/tsconfig.json
+++ b/services/api/tsconfig.json
@@ -26,5 +26,8 @@
       "@entities/*": ["src/domain/entities/*"],
       "@usecases/*": ["src/domain/usecases/*"]
     }
+  },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
   }
 }
