--- a/services/api/package.json
+++ b/services/api/package.json
@@ -38,6 +38,7 @@
     "@nestjs/passport": "9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "auth0": "3.0.1",
+    "dynamodb-onetable": "2.5.1",
     "express-jwt": "7.7.7",
     "jwks-rsa": "3.0.0",
     "node-fetch": "2.6.7",
