--- a/services/api/package.json
+++ b/services/api/package.json
@@ -62,8 +62,11 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
+    "eslint": "8.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "3.5.3",
+    "eslint-plugin-boundaries": "3.1.0",
+    "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
     "jest-mock-extended": "3.0.1",
