--- a/.github/workflows/cleanup-stacks.yml
+++ b/.github/workflows/cleanup-stacks.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           working-directory: pulumi
           verbose: true
+          preview: false
           config: |
             policies:
               dev:
