--- a/client/package.json
+++ b/client/package.json
@@ -17,15 +17,20 @@
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@tanstack/react-query": "^4.20.4",
+    "dompurify": "2.4.3",
     "event-source-polyfill": "1.0.31",
     "framer-motion": "8.0.2",
+    "highlight.js": "11.7.0",
+    "marked": "4.2.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "4.7.1",
     "react-router-dom": "6.6.1"
   },
   "devDependencies": {
+    "@types/dompurify": "2.4.0",
     "@types/event-source-polyfill": "1.0.0",
+    "@types/marked": "4.0.8",
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
