--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@tanstack/react-query": "^4.20.4",
+    "date-fns": "2.29.3",
     "dompurify": "2.4.3",
     "event-source-polyfill": "1.0.31",
     "framer-motion": "8.0.2",
