--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "lint": "eslint --max-warnings 0 'src/**/*.{ts,tsx}'",
     "lint:fix": "eslint --max-warnings 0 --fix 'src/**/*.{ts,tsx}'",
-    "format": "prettier --write 'src/**/*.{ts,tsx,css,md}' --config ./.prettierrc"
+    "format": "prettier --write 'src/**/*.{ts,tsx,css,md}' --config ./.prettierrc",
+    "storybook:dev": "storybook dev -p 6006",
+    "storybook:build": "storybook build"
   },
   "dependencies": {
     "@auth0/auth0-react": "1.12.0",
@@ -29,6 +31,13 @@
     "react-router-dom": "6.6.1"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.0-beta.38",
+    "@storybook/addon-interactions": "^7.0.0-beta.38",
+    "@storybook/addon-links": "^7.0.0-beta.38",
+    "@storybook/blocks": "^7.0.0-beta.38",
+    "@storybook/react": "^7.0.0-beta.38",
+    "@storybook/react-vite": "^7.0.0-beta.38",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "@types/dompurify": "2.4.0",
     "@types/event-source-polyfill": "1.0.0",
     "@types/marked": "4.0.8",
@@ -43,7 +52,10 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-storybook": "0.6.10",
     "prettier": "2.8.1",
+    "prop-types": "15.8.1",
+    "storybook": "^7.0.0-beta.38",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
