--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,20 @@ jobs:
       - uses: actions/checkout@v3
       - run: npm ci
       - run: npm run test
+  
+  chromatic:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: client
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - run: npm ci
+      - run: npm run chromatic
+    env:
+      CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
 
   e2e-test:
     runs-on: ubuntu-latest
@@ -48,7 +62,7 @@ jobs:
       - run: npm run test:e2e
 
   build-api:
-    needs: [lint, test, e2e-test]
+    needs: [lint, test, e2e-test, chromatic]
     if: github.ref == 'refs/heads/develop'
     uses: jbrunton/workflows/.github/workflows/build-image.yml@develop
     with:
