--- a/services/api/package.json
+++ b/services/api/package.json
@@ -18,7 +18,7 @@
     "db:init": "NODE_ENV=development ts-node ./scripts/db/init.ts",
     "db:drop": "NODE_ENV=development ts-node ./scripts/db/drop.ts",
     "db:test:drop": "NODE_ENV=test ts-node ./scripts/db/drop.ts",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --max-warnings 0",
     "test": "jest",
     "test:int": "jest --config ./jest.int.config.js",
     "test:watch": "jest --watch",
