--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -37,12 +37,29 @@ jobs:
         working-directory: client
       - run: npm ci
         working-directory: pulumi
+      - uses: pulumi/actions@v3
+        with:
+          command: up
+          stack-name: ${{ github.head_ref }}
+          upsert: true
+          work-dir: pulumi
+          comment-on-pr: true
+          github-token: ${{ secrets.CI_MINION_PAT }}
+        env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-east-1
+          API_TAG: ${{ needs.build-api.outputs.tag }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Get pulumi outputs
         id: pulumi-outputs
         run: |
           echo "cluster=$(pulumi stack output cluster)" > $GITHUB_OUTPUT
           echo "service=$(pulumi stack output apiService)" > $GITHUB_OUTPUT
           echo "taskDefinitionArn=$(pulumi stack output apiTaskDefinitionArn)" > $GITHUB_OUTPUT
+        env:
+          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
       - name: Get current task definition
         id: current-task-def
         run: |
