--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -74,7 +74,7 @@ jobs:
         run: |
           pulumi stack select ${{ github.head_ref }}
           export TASK_DEFINITION_FILE=${{ runner.temp }}/taskDefinition.json
-          aws ecs describe-task-definition --task-definition $TASK_DEFINITION_ARN --output json > $TASK_DEFINITION_FILE
+          aws ecs describe-task-definition --task-definition $TASK_DEFINITION_ARN --output json | jq .taskDefinition > $TASK_DEFINITION_FILE
           echo "taskDefinitionFile=$TASK_DEFINITION_FILE" > $GITHUB_OUTPUT
 
           echo "TASK_DEFINITION_FILE: $TASK_DEFINITION_FILE"
