--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
     "@tanstack/react-query": "^4.20.4",
+    "axios": "1.3.4",
     "date-fns": "2.29.3",
+    "debug": "4.3.4",
     "dompurify": "2.4.3",
     "event-source-polyfill": "1.0.31",
     "framer-motion": "8.0.2",
@@ -29,6 +31,7 @@
     "react-router-dom": "6.6.1"
   },
   "devDependencies": {
+    "@types/debug": "4.1.7",
     "@types/dompurify": "2.4.0",
     "@types/event-source-polyfill": "1.0.0",
     "@types/marked": "4.0.8",
