--- a/services/api/package.json
+++ b/services/api/package.json
@@ -50,7 +50,8 @@
     "rambda": "7.4.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "zod": "3.21.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
