--- a/pulumi/Pulumi.yaml
+++ b/pulumi/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: auth0-test
-description: Infrastructure code for auth0-test
+name: chat-demo
+description: Infrastructure code for chat-demo
 runtime: nodejs
