--- a/.github/workflows/cleanup-stacks.yml
+++ b/.github/workflows/cleanup-stacks.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: jbrunton/cleanup-pulumi-stacks@develop
+      - uses: jbrunton/cleanup-pulumi-stacks@v1
         with:
           working-directory: pulumi
           verbose: true
