--- a/services/api/package.json
+++ b/services/api/package.json
@@ -24,6 +24,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:mutate": "stryker run",
     "test:e2e": "jest --config ./test/jest-e2e.config.cjs"
   },
   "dependencies": {
@@ -57,6 +58,8 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@stryker-mutator/core": "7.0.2",
+    "@stryker-mutator/jest-runner": "7.0.2",
     "@types/auth0": "2.35.8",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
