--- a/services/api/package.json
+++ b/services/api/package.json
@@ -33,7 +33,7 @@
     "@aws-sdk/lib-dynamodb": "3.238.0",
     "@casl/ability": "6.3.3",
     "@faker-js/faker": "7.6.0",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "9.4.2",
     "@nestjs/config": "2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
@@ -76,6 +76,7 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
+    "jest-fail-on-console": "3.1.1",
     "jest-mock-extended": "3.0.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
