--- a/services/api/package.json
+++ b/services/api/package.json
@@ -76,6 +76,7 @@
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
+    "jest-fail-on-console": "3.1.1",
     "jest-mock-extended": "3.0.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
