--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,33 @@ jobs:
       - run: npm ci
       - run: npm run test:mutate
 
+  # playwright:
+  #   timeout-minutes: 60
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       working-directory: e2e
+  #   steps:
+  #   - uses: actions/checkout@v3
+  #   - uses: actions/setup-node@v3
+  #     with:
+  #       node-version: 16
+  #   - name: Install dependencies
+  #     run: npm ci
+  #   - name: Install Playwright Browsers
+  #     run: npx playwright install --with-deps
+  #   - uses: rrainn/dynamodb-action@v2.0.1
+  #     with:
+  #       port: 8001
+  #   - name: Run Playwright tests
+  #     run: npx playwright test
+  #   - uses: actions/upload-artifact@v3
+  #     if: always()
+  #     with:
+  #       name: playwright-report
+  #       path: playwright-report/
+  #       retention-days: 30
+
   build-api:
     needs: [lint, test, e2e-test]
     if: github.ref == 'refs/heads/main'
