--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,9 +47,63 @@ jobs:
       - run: npm ci
       - run: npm run test:e2e
 
+  playwright:
+    needs: [lint, test, e2e-test]
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: e2e
+    steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 18
+    - name: Install dependencies
+      run: npm ci
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
+    - uses: rrainn/dynamodb-action@v2.0.1
+      with:
+        port: 8000
+    - name: Start API
+      working-directory: services/api
+      run: |
+        npm ci
+        npm run db:init
+        npm run start:dev &
+    - name: Start Client
+      working-directory: client
+      run: |
+        npm ci
+        npm run dev &
+      env:
+        VITE_API_URL: http://localhost:3000
+    - name: Configure environment
+      run: |
+        touch .env
+        echo "USER_EMAIL=$USER_EMAIL" >> .env
+        echo "USER_PASSWORD=$USER_PASSWORD" >> .env
+      env:
+        USER_EMAIL: ${{ secrets.TEST_USER_EMAIL }}
+        USER_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
+    - name: Wait for services
+      run: |
+        npx --yes wait-on http://localhost:3000
+        # Note: wait-on doesn't work with Vite when sending a head request
+        # https://github.com/jeffbski/wait-on/issues/78
+        npx --yes wait-on tcp:5173
+    - name: Run Playwright tests
+      run: npx playwright test
+    - uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: playwright-report
+        path: e2e/playwright-report/
+        retention-days: 1
+
   mutation-test:
     runs-on: ubuntu-latest
-    needs: [test]
+    needs: [playwright]
     if: github.ref == 'refs/heads/main'
     env:
       STRYKER_DASHBOARD_API_KEY: ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
@@ -61,35 +115,8 @@ jobs:
       - run: npm ci
       - run: npm run test:mutate
 
-  # playwright:
-  #   timeout-minutes: 60
-  #   runs-on: ubuntu-latest
-  #   defaults:
-  #     run:
-  #       working-directory: e2e
-  #   steps:
-  #   - uses: actions/checkout@v3
-  #   - uses: actions/setup-node@v3
-  #     with:
-  #       node-version: 16
-  #   - name: Install dependencies
-  #     run: npm ci
-  #   - name: Install Playwright Browsers
-  #     run: npx playwright install --with-deps
-  #   - uses: rrainn/dynamodb-action@v2.0.1
-  #     with:
-  #       port: 8001
-  #   - name: Run Playwright tests
-  #     run: npx playwright test
-  #   - uses: actions/upload-artifact@v3
-  #     if: always()
-  #     with:
-  #       name: playwright-report
-  #       path: playwright-report/
-  #       retention-days: 30
-
   build-api:
-    needs: [lint, test, e2e-test]
+    needs: [playwright]
     if: github.ref == 'refs/heads/main'
     uses: jbrunton/workflows/.github/workflows/build-image.yml@develop
     with:
@@ -114,7 +141,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build Client
         env:
-            VITE_API_URL: https:/chat-demo-api.staging.jbrunton-aws.com
+            VITE_API_URL: https://chat-demo-api.staging.jbrunton-aws.com
         run: |
           npm ci
           npm run build
