--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "preview": "vite preview",
     "lint": "eslint --max-warnings 0 'src/**/*.{ts,tsx}'",
     "lint:fix": "eslint --max-warnings 0 --fix 'src/**/*.{ts,tsx}'",
-    "format": "prettier --write 'src/**/*.{ts,tsx,css,md}' --config ./.prettierrc"
+    "format": "prettier --write 'src/**/*.{ts,tsx,css,md}' --config ./.prettierrc",
+    "test": "vitest"
   },
   "dependencies": {
     "@auth0/auth0-react": "1.12.0",
@@ -34,6 +35,9 @@
     "react-router-dom": "6.6.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/debug": "4.1.7",
     "@types/dompurify": "2.4.0",
     "@types/event-source-polyfill": "1.0.0",
@@ -49,8 +53,11 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
+    "jsdom": "22.1.0",
+    "msw": "1.2.3",
     "prettier": "2.8.1",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vitest": "0.33.0"
   }
 }
