--- a/services/api/package.json
+++ b/services/api/package.json
@@ -25,7 +25,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:mutate": "stryker run",
-    "test:e2e": "jest --config ./test/jest-e2e.config.cjs"
+    "test:e2e": "jest --config ./test/jest-e2e.config.cjs",
+    "docs:generate": "typedoc",
+    "docs:serve": "http-server docs"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "3.238.0",
@@ -75,6 +77,7 @@
     "eslint-plugin-boundaries": "3.1.0",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prettier": "^4.0.0",
+    "http-server": "14.1.1",
     "jest": "29.7.0",
     "jest-fail-on-console": "3.1.1",
     "jest-mock-extended": "3.0.1",
@@ -85,6 +88,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
+    "typedoc": "0.26.5",
     "typescript": "^4.7.4"
   }
 }
