--- a/services/api/package.json
+++ b/services/api/package.json
@@ -58,6 +58,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "ts-pattern": "5.3.1",
     "zod": "3.21.4"
   },
   "devDependencies": {
