--- a/services/api/package.json
+++ b/services/api/package.json
@@ -56,6 +56,7 @@
     "passport-jwt": "4.0.0",
     "rambda": "7.4.0",
     "reflect-metadata": "^0.1.13",
+    "remeda": "2.11.0",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "ts-pattern": "5.3.1",
