--- a/services/api/package.json
+++ b/services/api/package.json
@@ -56,8 +56,10 @@
     "passport-jwt": "4.0.0",
     "rambda": "7.4.0",
     "reflect-metadata": "^0.1.13",
+    "remeda": "2.11.0",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "ts-pattern": "5.3.1",
     "zod": "3.21.4"
   },
   "devDependencies": {
@@ -84,7 +86,7 @@
     "http-server": "14.1.1",
     "jest": "29.7.0",
     "jest-fail-on-console": "3.1.1",
-    "jest-mock-extended": "3.0.1",
+    "jest-mock-extended": "3.0.7",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
@@ -93,6 +95,6 @@
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
     "typedoc": "0.26.5",
-    "typescript": "^4.7.4"
+    "typescript": "^5.0.0"
   }
 }
