--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,10 +32,10 @@ jobs:
       run:
         working-directory: "services/api"
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - run: npm ci
-      - run: npm run docs:generate
+      - uses: pnpm/action-setup@v4
+      - uses: actions/checkout@v4
+      - run: pnpm install
+      - run: pnpm run docs:generate
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
