--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "engines": {
     "node": "18.x"
   },
+  "packageManager": "pnpm@9.8.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
