--- a/e2e/package.json
+++ b/e2e/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "packageManager": "pnpm@9.8.0",
   "scripts": {
     "test": "playwright test",
     "test:ui": "playwright test --ui"
