--- a/pulumi/package.json
+++ b/pulumi/package.json
@@ -4,6 +4,7 @@
   "engines": {
     "node": "18.x"
   },
+  "packageManager": "pnpm@9.8.0",
   "scripts": {
     "test": "jest",
     "lint": "eslint --max-warnings 0 .",
