--- a/services/api/package.json
+++ b/services/api/package.json
@@ -8,6 +8,7 @@
   "engines": {
     "node": "18.x"
   },
+  "packageManager": "pnpm@9.8.0",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
