--- a/pulumi/package.json
+++ b/pulumi/package.json
@@ -19,7 +19,7 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
     "jest": "29.3.1",
-    "jest-mock-extended": "3.0.1",
+    "jest-mock-extended": "3.0.7",
     "prettier": "2.8.1",
     "ts-jest": "29.0.3",
     "tsconfig-paths": "4.1.1"
@@ -32,6 +32,7 @@
     "@pulumi/random": "4.8.2",
     "@pulumi/synced-folder": "^0.0.9",
     "date-fns": "2.29.3",
-    "ts-node": "10.9.1"
+    "ts-node": "10.9.2",
+    "typescript": "5.5.4"
   }
 }
