--- a/services/api/package.json
+++ b/services/api/package.json
@@ -14,7 +14,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/src/main",
-    "start:dev": "NODE_ENV=development nest start --watch",
+    "dev": "NODE_ENV=development nest start --watch",
     "start:debug": "NODE_ENV=development nest start --debug --watch",
     "db:init": "NODE_ENV=development ts-node ./scripts/db/init.ts",
     "db:drop": "NODE_ENV=development ts-node ./scripts/db/drop.ts",
